  OnNotifyReflect in the CWnd that generated them.
* Existing windows (including dialog items) can now be attached to a CWnd.
  The window is automatically subclassed when attached to a CWnd.


Removed CFrame::OnFrameCreated.  Use CFrame::OnInitialUpdate instead.
CWnd::OnNotify returns a LRESULT
Added CWnd::OnNotifyReflect
Added CWnd::Attach
Added CWnd::AttachDlgItem
Added CWnd::Detach
Moved CToolbar::SetButtons to CFrame::SetButtons
CFrame::AddMenubarBand modified to CFrame::AddMenubarBand(int nHeight)
CFrame::AddToolbarBand modified to CFrame::AddToolbarBand(int nHeight)

Bug Fixes
* CFrame::OnHelp now returns the focus back to the window that had it before OnHelp 
  was called.

Version 5.0
-----------
This version provides for MDI frames and adds a rebar control and menubar to
frames. A CSplitter class is also included to allow a horizontal or vertical
splitter bar to a CWnd object.

Summary of changes
------------------
1) Moved the Win32++ files from ./Windows to ../Win32++. This allows any 
    number of Win32++ projects to share the same copy of Win32++ files.
2) Integrated the Basic and Enhanced frameworks into a single Win32++ framework.
    If you were using the basic framework you will see the following changes:
   * Added rebars to the frame window
   * Added a menubar to the frame window
   * Added MDI frame support
   * Added splitter window support
3) The menubar (previously available in the enhanced version) now fully
    suports MDI applications.
4) Changed CSplitter. The splitter bar is now an additional child window rather
    than the CSplitter CWnd object itself.
5) CFrame::Recalclayout no longer invalidates the view window. Programmers can
    now choose whether or not to invalidate the view window when the frame window
    is resized. This has the potential to eliminate unnecessary flicker.
6) The namespace used by the framework has been renamed to Win32xx.
7) Superclassing is now used instead of subclassing for common controls.
