@@ -13,6 +13,8 @@ Added CWnd::OnNotifyReflect
 Added CWnd::Attach
 Added CWnd::AttachDlgItem
 Added CWnd::Detach
+Added CStatusbar::SetText
+Added CStatusbar::SetOaneSizes
 Moved CToolbar::SetButtons to CFrame::SetButtons
 CFrame::AddMenubarBand modified to CFrame::AddMenubarBand(int nHeight)
 CFrame::AddToolbarBand modified to CFrame::AddToolbarBand(int nHeight)
